2000-04-18  ERDI Gergo  <cactus@cactus.rulez.org>

	* art_rgb_pixbuf_affine.h: Included the ArtPixBuf declaration

Fri Apr 14 16:33:55 2000  Raph Levien  <raph@acm.org>

	* art_svp_wind.c (art_svp_uncross, art_svp_rewind_uncrossed):
	Fixed uninitialized memory reads when inserting new segment into
	active_segs.

	* art_bpath.c (art_bpath_affine_transform): Made it avoid
	potential uninitialized memory reads when not all the coordinates
	are needed. Thanks to Morten Welinder for spotting both of these
	problems.

2000-04-05  Raph Levien  <raph@gimp.org>

	* art_svp_wind.c: Make "colinear" warnings go to stderr instead
	of stdout. Of course, when I finish the new intersector, these
	will go away entirely.

2000-04-04  Raph Levien  <raph@gimp.org>

	* art_uta_vpath.c (art_uta_add_line): Fixed bug that was causing
	segfaults on alphas. Thanks to msw for localizing it.

2000-01-17  Raph Levien  <raph@gimp.org>

	* art_svp_vpath_stroke.c (art_svp_vpath_stroke): Typo in api
	header (thanks rak).

2000-01-16  Timur Bakeyev  <timur@gnu.org>

	* autoconf.sh: Instead of jumping between srdir and builddir just process
	all the auto* staff in srcdir. In fact, just saying the same things in 
	other words.

2000-01-10  Elliot Lee  <sopwith@redhat.com>

	* Makefile.am, *.h: Add rather bad hacks to the header files to allow compilation

	* Makefile.am: Distribute libart-config.in

2000-01-09  Raph Levien  <raph@gimp.org>

	art_rgb_pixbuf_affine.c, art_rgb_rgba_affine.c, art_rgb_svp.c,
	art_svp.c, art_svp_ops.c, art_svp_point.c, art_svp_render_aa.c,
	art_svp_vpath.c, art_svp_vpath_stroke.c, art_svp_wind.c,
	art_uta.c, art_uta_ops.c, art_uta_rect.c, art_uta_svp.c,
	art_uta_vpath.c, art_vpath.c, art_vpath_bpath.c, art_vpath_dash.c,
	art_vpath_svp.c: Added API documentation.

Fri Sep 24 17:53:21 1999  Raph Levien  <raph@acm.org>

	* art_svp_render_aa.c (art_svp_render_insert_active): Avoid
	reading undefined memory (thanks to Morten Welinder).

1999-09-19  Raph Levien  <raph@gimp.org>
